<resources>
    <string name="app_name">Pyro Application</string>

    <string name="welcome">Welcome!</string>
    <string name="pyro_fitness_tracker">PyRo Fitness Tracker</string>

    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="register_here">Register Here!</string>


    <string name="workout_tracker">Workout Tracker</string>calories
    <string name="type">Type</string>
...


    <string name="use_text_boxes_above_to_enter">Use Text Boxes Above to Enter</string>
    <string name="workout_information">Workout Information!</string>

    <string name="enter">Enter</string>
    <string name="register">Register</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_user_account">Create User Account</string>
    <string name="welcome_back_to_pyro" />
    <string name="register_today" />
...
